# erabu

./: Cargo.toml  README.md
src/: collection.rs  main.rs
src/subcommands/: add.rs  del.rs  list.rs  mod.rs  pick.rs
